tests/snapshots/examples_fixtures/io__aoc_day1_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day1_part1.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify numeric operands (Int or Float) with Int and Option<Int>.

  --> examples/io/aoc_day1_part1.flx:18:9
   |
18 |         0 - distance
   |         ^^^^^^^^^^^^
   |         ------------ expected numeric operands (Int or Float), found Int and Option<Int>
   |         ------------ operator operands are known at compile time

Help:
  adjust operand types or add explicit conversion


--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `solve_steps`.

  --> examples/io/aoc_day1_part1.flx:28:5
   |
28 |     solve_steps(rest, (next_pos, next_hits))
   |     ^^^^^^^^^^^

Hint:
  Define it first: let solve_steps = ...;

Found 2 errors.
== stdout ==
<not executed>
